[package]
name = "enet-mqtt"
version = "0.2.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
clap = "3.0.0-beta.5"
color-eyre = "0.5.11"
enet-client = "0.2.1"
eventuals = "0.6.6"
futures = "0.3.18"
lazy_static = "1.4.0"
matchit = "0.4.4"
paho-mqtt = { version = "0.9.1" }
serde = "1.0.130"
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "json"] }

[target.'cfg(windows)'.dependencies]
paho-mqtt = { version = "0.9.1", features = ["vendored-ssl"] }

[dev-dependencies]
serde_test = "1.0.130"

[profile.release]
lto = "thin"
debug = 1

[features]
vendored = ["paho-mqtt/vendored-ssl"]
